# swiss-job-hunter

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  cli.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  server.py  sjh_entry.py
.claude/: settings.local.json
.github/workflows/: ci.yml  docker-publish.yml  scraper-health.yml
analyzer/: __init__.py  report.py  scorer.py
applicator/: __init__.py  email_apply.py  form_apply.py
config/: settings.py
db/: __init__.py  models.py  session.py
dedup/: __init__.py  exact.py  semantic.py
docs/: README.md
llm/: __init__.py  cover_letter.py  router.py
llm/prompts/: cover_letter_de.txt  cover_letter_en.txt
scrapers/: __init__.py  base.py  efinancialcareers.py  indeed_ch.py  jobs_ch.py  jobscout24.py  jobup_ch.py  linkedin_rss.py  michael_page.py  swissdevjobs.py  zuri_jobs.py
tests/: __init__.py  test_dedup.py  test_docker.py  test_linkedin_rss.py  test_scrapers.py  test_settings.py
tools/: inspect_db.py
ui/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
ui/src/: App.jsx
