[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swiss-job-hunter"
version = "0.1.0"
description = "Automated job search, deduplication, analysis and application for Switzerland"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Leo Zhong", email = "leo.y.zhong@gmail.com" }]

dependencies = [
    "playwright>=1.44.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
    "anthropic>=0.28.0",
    "openai>=1.30.0",
    "reportlab>=4.2.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "apscheduler>=3.10.4",
    "aiosmtplib>=3.0.0",
    "tenacity>=8.3.0",
    "python-dateutil>=2.9.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
sjh = "sjh_entry:main"

[tool.setuptools]
py-modules = ["cli", "sjh_entry"]

[tool.setuptools.packages.find]
where = ["."]
include = ["config*", "scrapers*", "dedup*", "db*", "analyzer*", "llm*", "applicator*"]

[tool.setuptools.package-data]
"llm" = ["prompts/*.txt"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
